# emr22

./: .gitignore  CMakeLists.txt  README.md  UR5e_ROS_Driver_und_Gripper.odt  gripper_modbus_script.py  package.xml  ur5_jnt_pos_ctrl.yaml  usage.md
_ur3/: move_group_python_interface_UR3.py  move_group_python_interface_tutorial.py  move_group_python_interface_tutorial_ur3_Version.py  movegroup_API.py  movit.py  testMoveIt.py
config/: ur5_jnt_pos_ctrl.yaml
controller/: arm_controller_ur5.yaml
gazebo_worlds_emr22/: simple_pick_and_place (Würfel)  ur5_pick_place_beer
install_script/: .bashrc  Install_MoveIt_on_ROS1.sh  Install_UR5_Gripper_MoveIt _Config_4_Gazebo.sh  Install_UR_URDF_Gazebo.sh  helpful_commands.txt  real_robot_Moveit_installation  step1_ros_noetic_install_skript.sh  step2_Install_MoveIt_on_ROS1.sh  step3_Install_UR_URDF_Gazebo.sh  step4_Install_Depth_Camera.sh  step4_Install_UR5_Gripper_MoveIt _Config_4_Gazebo.sh  step5_setup_4_real_robot_ur5e  step6_setup_realsense_3d_cam.sh  ur3_real_moveit_worx_ur_hardware_interface_topics.txt  working_moveit_without_gripper_rosnode_list.txt
launch/: astra_find_object_2d.launch  astra_orbbec_rgb  find_object_2d.launch  find_object_3d.launch  my_usb_cam_ros_node.launch  ur3_upload.launch  ur5_gazebo.launch  ur5_gazebo_bringup.launch  ur5_gazebo_gripper.launch  ur5_gazebo_joint_position_control.launch  ur5_gazebo_moveIt_bringup.launch  ur5_gazebo_pid.launch  ur5_joint_position_control.launch  ur5_upload.launch
nodes/01_listener_talker/: listener.py
nodes/02_panda_python/: move_group_python_first_example.py  p01_panda_move_box.py  sw01_move_group_python_first_example.py  sw02_move_group_python_add_box.py  sw03_UR5_move_group_python_first_example.py
nodes/02_ur5_gazebo_qt_slider_trajectory/: pose_ur5.txt  ur5_gazebo_qt_slider.py  ur5_gazebo_qt_slider_trajectory.py  ur5_realbot_qt_slider_trajectory.py
nodes/03_KDL/: kdl_test2.py  kdl_test3.py
nodes/03_KDL_No_worx/: kdl_test.py  ur5_cartesian_position_controller.cpp
nodes/03_pick_and_place/: move_group_api_test.py  move_group_api_test_gripper.py  pick_and_place.py  pick_and_place_collision (old).py  pick_and_place_collision.py  pick_and_place_collision_depth_cam.py  pick_and_place_collision_v2.py
nodes/04_openCV/: blue_box_tracker.py  color_picker.py
nodes/05_find_object_2d/: astra.launch  find_object_2d_realsense_world.launch  fixed_tf_broadcaster.py  fixed_tf_broadcaster_ur5e.py  grasp_detected_object_4_objects_tf.py  grasp_detected_object_8_tf.py  grasp_detected_object_8_tf_ur5e.py  grasp_detected_object_9_tf.py  grasp_detected_object_tf.py  pick_and_place_find_object_2d.py  real_cam_publish_tf_world_camera.py  ur5e_gripper_per_socket.py
nodes/06_moveit_task_contructor/: mtc_simple_test.py  mtc_simple_test2.py
nodes/Plen01_listener_talker/: talker.py
nodes/Plen01_ur5_gazebo_qt_slider/: pose_ur5.txt
nodes/hello_ros_node/: hello_ros_node.cpp
nodes/p2_ur5_gazebo_qt_slider_trajectory/: ur5_gazebo_qt_slider_trajectory.py
nodes/ue01_ur5_gazebo_qt_slider/: ur5_gazebo_qt_slider.py
nodes/ue02_ur5_gazebo_qt_slider/: ur5_gazebo_qt_slider.py
nodes/ue03_ur5_gazebo_moveit_python_api/: ue03_pick_and_place_python_api.py  ue03_pick_and_place_python_api_V2.py  ue03_pick_and_place_python_api_V2_greenBox.py
nodes/ue0x_ur5_gazebo_qt_slider_trajectory/: ue03_ur5_gazebo_qt_slider_trajectory.py  ue03_ur5_realbot_qt_slider_trajectory.py
rviz_config/: astra_orbbec.rviz  emr22.rviz  moveit_panda_demo.rviz  moveit_ur5_demo.rviz
scripts/: Positions_Posen.txt  UR3_qt_017.py  main_control_gui_ur5_emr22.py  pub_msg.py  quaternion3D.py  starthilfe_ur3.py  starthilfe_ur5.py
scripts/open_cv/: open_cv_sw01_first_test.py  sw02_readWebcam.py
src/: adaim_pick_and_place_collision_depth_camera_cartesian.cpp  hello_ros_node.cpp  hello_ros_param.cpp  p1_my_cpp_publisher_4turtlesim.cpp  turtle_publisher.cpp  turtle_subscriber.cpp
urdf/: ur3_robotiq85_gripper.urdf.xacro  ur5_gazebo.urdf  ur5_jnt_pos_ctrl.urdf  ur5_robotiq85_gripper.urdf.xacro
